--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <!-- CHARACTER ENCODING & VIEWPORT FIRST -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- PRIMARY METADATA -->
   <title>Web Basics - Full Stack Learning Path</title>
@@ -19,31 +19,32 @@
 
   <!-- OPEN GRAPH/SOCIAL METADATA (SHOULD COME BEFORE ICONS) -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://github.com/wasulabenjamin/web_basics">
+  <meta property="og:url" content="https://github.com/wasulabenjamin/web-basics">
   <meta property="og:title" content="Web Development Learning Path">
-  <meta property="og:description" content="Master fullstack development with curated projects in html, html5, css,
-    javascript, json, bootstrap, tailwindcss, vuejs, postgresql, and supabase">
-  <meta property="og:image" 
-    content="https://raw.githubusercontent.com/wasulabenjamin/web_basics/main/assets/img/social-media.png">
+  <meta property="og:description" content="A curated step-by-step learning path covering everything from basic web 
+    development to modern fullstack apps using tools like Vue.js, Supabase, and PostgreSQL.">
+  <meta property="og:image" content="assets/img/social-media.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="628">
-  <meta property="og:image:alt" content="Web Development Learning Path">
+  <meta property="og:image:alt" content="Web Development Learning Path Infographic">
   <meta property="og:site_name" content="Wasula Benjamin">
 
   <!-- TWITTER CARD TAGS (SHOULD COME BEFORE ICONS) -->
   <meta name="twitter:card" content="summary_large_imageu">
   <meta name="twitter:title" content="Web Development Learning Path">
-  <meta name="twitter:description" content="Master fullstack development with curated projects in html, html5, css, 
-    javascript, json, bootstrap, tailwindcss, vuejs, postgresql, and supabase">
-  <meta name="twitter:image" 
-    content="https://raw.githubusercontent.com/wasulabenjamin/web_basics/main/assets/img/social-media.png">
+  <meta name="twitter:description" content="A curated step-by-step learning path covering everything from basic web 
+    development to modern fullstack apps using tools like Vue.js, Supabase, and PostgreSQL.">
+  <meta name="twitter:image" content="assets/img/social-media.png">
   <meta name="twitter:image:alt" content="Web Development Learning Path Infographic">
   <meta name="twitter:site" content="@wasulabenjamin">
   <meta name="twitter:creator" content="@wasulabenjamin">
-  <meta name="twitter:domain" content="github.com/wasulabenjamin/web_basics">
+  <meta name="twitter:domain" content="github.com/wasulabenjamin/web-basics">
 
   <!-- PWA SUPPORT AND BROWSER UI ENHANCEMENTS -->
-  <meta name="theme-color" content="#fafafa">
+  <meta name="theme-color" content="#fafafa"> <!-- fallback default for older browsers -->
+  <meta name="theme-color" content="#fafafa" media="(prefers-color-scheme: light)">
+  <meta name="theme-color" content="#121212" media="(prefers-color-scheme: dark)">
+  <meta name="color-scheme" content="light dark">
   <link rel="manifest" href="site.webmanifest">
 
   <!-- ICONS (ORDER MATTERS FOR FALLBACK) -->
