--- a/fundamentals/01-html/lesson-01-introduction.html
+++ b/fundamentals/01-html/lesson-01-introduction.html
@@ -47,7 +47,7 @@
   <!-- ICONS (ORDER MATTERS FOR FALLBACK) -->
   <link rel="icon" href="../../icon.svg" type="image/svg+xml">
   <link rel="icon" href="../../icon.png" type="image/png">
-  <link rel="icon" href="../../favicon.ico" sizes="any">
+  <link rel="icon" href="../../favicon.ico" type="image/x-icon" sizes="any">
   <link rel="apple-touch-icon" href="../../icon.png">
 
   <!-- STYLESHEETS: LOCAL FIRST  -->
@@ -216,7 +216,7 @@
 
       The xml:lang Attribute
       The xml:lang attribute is the XHTML replacement for the lang attribute.
-      The value of the xml:lang attribute should be an ISO-639 country code, as mentioned in the previous section.
+      The value of the xml:lang attribute should be an ISO-639 country code, as mentioned in the previous main-section.
 
     Generic Attributes
     Some other attributes that are readily usable with many of the HTML tags include:
@@ -408,7 +408,7 @@
         <address>    <article>    <aside>      <blockquote> <canvas>     <dd>         <div>        <dl>
         <dt>         <fieldset>   <figcaption> <figure>     <footer>     <form>       <h1 - h6>    <header>
         <hr>         <li>         <main>       <nav>        <noscript>   <ol>         <p>          <pre>
-        <section>    <table>      <tfoot>      <ul>         <video>
+        <main-section>    <table>      <tfoot>      <ul>         <video>
 
     - HTML Inline Elements
       Inline elements are used to make useful block elements, like adding anchor links.
@@ -453,7 +453,7 @@
     - External CSS:
       Define CSS rules in a separate .css file and then include that file in your HTML document using HTML <link> tag.
     - Internal CSS:
-      Define style sheet rules in the header section of the HTML document using <style> tag.
+      Define style sheet rules in the header main-section of the HTML document using <style> tag.
     - Inline CSS:
       Define style sheet rules directly along-with the HTML elements using style attribute.
   -->
