--- a/fundamentals/01-html/lesson-02-tables.html
+++ b/fundamentals/01-html/lesson-02-tables.html
@@ -46,7 +46,7 @@
   <!-- ICONS (ORDER MATTERS FOR FALLBACK) -->
   <link rel="icon" href="../../icon.svg" type="image/svg+xml">
   <link rel="icon" href="../../icon.png" type="image/png">
-  <link rel="icon" href="../../favicon.ico" sizes="any">
+  <link rel="icon" href="../../favicon.ico" type="image/x-icon" sizes="any">
   <link rel="apple-touch-icon" href="../../icon.png">
 
   <!-- STYLESHEETS: LOCAL FIRST  -->
@@ -122,9 +122,9 @@
     - <caption>.... This tag specifies the caption for the table.
     - <colgroup>... This tag describes the collection of one or more columns in a table for formatting.
     - <col>........ This tag is used to offer information about columns.
-    - <thead>...... This tag is used to define table header section.
-    - <tbody>...... This tag is used to define table body section.
-    - <tfoot>...... This tag is used to define the table footer section.
+    - <thead>...... This tag is used to define table header main-section.
+    - <tbody>...... This tag is used to define table body main-section.
+    - <tfoot>...... This tag is used to define the table footer main-section.
   -->
   <h2>Creating an HTML Table</h2>
   <table>
