--- a/fundamentals/01-html/lesson-03-lists.html
+++ b/fundamentals/01-html/lesson-03-lists.html
@@ -46,7 +46,7 @@
   <!-- ICONS (ORDER MATTERS FOR FALLBACK) -->
   <link rel="icon" href="../../icon.svg" type="image/svg+xml">
   <link rel="icon" href="../../icon.png" type="image/png">
-  <link rel="icon" href="../../favicon.ico" sizes="any">
+  <link rel="icon" href="../../favicon.ico" type="image/x-icon" sizes="any">
   <link rel="apple-touch-icon" href="../../icon.png">
 
   <!-- STYLESHEETS: LOCAL FIRST  -->
