--- a/fundamentals/01-html/lesson-04-links.html
+++ b/fundamentals/01-html/lesson-04-links.html
@@ -46,7 +46,7 @@
   <!-- ICONS (ORDER MATTERS FOR FALLBACK) -->
   <link rel="icon" href="../../icon.svg" type="image/svg+xml">
   <link rel="icon" href="../../icon.png" type="image/png">
-  <link rel="icon" href="../../favicon.ico" sizes="any">
+  <link rel="icon" href="../../favicon.ico" type="image/x-icon" sizes="any">
   <link rel="apple-touch-icon" href="../../icon.png">
 
   <!-- STYLESHEETS: LOCAL FIRST  -->
@@ -92,8 +92,8 @@
     So your browser will concatenate given relative path to this base path and will make a complete URL.
 
     Linking to a Page Section
-    Linking to a section on the same page allows users to navigate directly to that section.
-    You can create a link in the same to a specific section by using the href attribute with a #id value,
+    Linking to a main-section on the same page allows users to navigate directly to that main-section.
+    You can create a link in the same to a specific main-section by using the href attribute with a #id value,
     where the #id targets an element on the page with a corresponding id attribute.
 
     Styling Hyperlinks (Setting Link Color)
