--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://github.com/wasulabenjamin/web-basics">
   <meta property="og:title" content="Web Development Learning Path">
-  <meta property="og:description" content="A curated step-by-step learning path covering everything from basic web 
+  <meta property="og:description" content="A curated step-by-step learning path covering everything from basic web
     development to modern fullstack apps using tools like Vue.js, Supabase, and PostgreSQL.">
   <meta property="og:image" content="assets/img/social-media.png">
   <meta property="og:image:width" content="1200">
@@ -32,7 +32,7 @@
   <!-- TWITTER CARD TAGS (SHOULD COME BEFORE ICONS) -->
   <meta name="twitter:card" content="summary_large_imageu">
   <meta name="twitter:title" content="Web Development Learning Path">
-  <meta name="twitter:description" content="A curated step-by-step learning path covering everything from basic web 
+  <meta name="twitter:description" content="A curated step-by-step learning path covering everything from basic web
     development to modern fullstack apps using tools like Vue.js, Supabase, and PostgreSQL.">
   <meta name="twitter:image" content="assets/img/social-media.png">
   <meta name="twitter:image:alt" content="Web Development Learning Path Infographic">
@@ -50,7 +50,7 @@
   <!-- ICONS (ORDER MATTERS FOR FALLBACK) -->
   <link rel="icon" href="icon.svg" type="image/svg+xml">
   <link rel="icon" href="icon.png" type="image/png">
-  <link rel="icon" href="favicon.ico" sizes="any">
+  <link rel="icon" href="favicon.ico" type="image/x-icon" sizes="any">
   <link rel="apple-touch-icon" href="icon.png">
 
   <!-- STYLESHEETS: LOCAL FIRST  -->
